src/test/deca/syntax/valid/notprovided/if_decl.deca
{
if ( x < 2 ) {
   print("Instruction et non déclaration");
}
}