src/test/deca/syntax/invalid/test_synt27.deca
//Resultat:
//      Erreur syntaxique : ) manquante ligne 3
{
if ( x < 2 ) {
   print("Instruction et non déclaration");
}else if(true {

}
}